[tool.poetry]
name = "podping-hivewriter"
version = "1.2.8"
license = "MIT"
authors = ["Alecks Gates <alecks@podping.org>", "Brian of London <brian@podping.org>"]
maintainers = ["Alecks Gates <alecks@podping.org>", "Brian of London <brian@podping.org>"]
readme = "README.md"
description = "This is a tool used to submit RFC 3987-compliant International Resource Identifiers as a Podping notification on the Hive blockchain."
homepage = "http://podping.org/"
repository = "https://github.com/Podcastindex-org/podping-hivewriter"
keywords = ["hive", "blockchain", "podping", "podcasting20"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
build = "build.py"
include = ["src/podping_hivewriter/schema/*.py", "src/podping_hivewriter/schema/*.so"]

[tool.poetry.dependencies]
python = "^3.8"
pyzmq = "^24.0.1"
cffi = "^1.14.5"
pydantic = "^1.9.0"
single-source = "^0.3.0"
rfc3987 = "^1.3.8"
asgiref = "^3.5"
typer = {extras = ["all"], version = "^0.3.2"}
capnpy = "^0.9.0"
lighthive = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
isort = "^5.8.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.0"
bandit = "^1.7.4"
pytest-timeout = "^2.0.2"
typer-cli = "^0.0.12"
flake8 = "^5.0.4"
mypy = "^0.982"
patch-env = "^1.0.0"
pytest-mock = "^3.8.2"

[tool.poetry.extras]
server = ["pyzmq"]


[tool.poetry.scripts]
podping = "podping_hivewriter.cli.podping:app"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0", "capnpy"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"